...
            <Button 
                buttonStyle={{marginBottom: 20}} 
                title='Check Native Module' 
                onPress={getStats} 
            />
            {!visible ? <Button 
                testID='addRestaurantButton' 
                title='Add Restaurant' 
                onPress={() => {
                    setVisible(true)
                }} 
            /> : null}
            <InputField 
...
